--- a/frontend/src/components/UserProfilPage.css
+++ b/frontend/src/components/UserProfilPage.css
@@ -1,26 +1,42 @@
 /* UserProfilePage.css */
 .custom-tab {
     transition: all 0.3s ease;
+    border: 1px solid #d1d1d1; /* Light grey border */
+    margin-bottom: 15px; /* Increased margin for space between items */
+    padding: 10px 15px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05); /* Subtle shadow */
 }
 
 .custom-tab:hover {
-    background-color: #f0f0f0; /* Or any other color */
-    border-radius: 5px; /* Optional, for rounded corners */
+    background-color: #e9ecef; /* Lighter grey for hover */
+    cursor: pointer;
+    border-color: #c1c1c1; /* Slightly darker border color on hover */
 }
+
 .user-profile-container .nav-item-custom {
-    border: 1px solid #dee2e6; /* Bootstrap border color */
-    margin-bottom: 5px;
-    border-radius: 0.25rem; /* Bootstrap border radius */
     color: #495057; /* Bootstrap text color */
-    background-color: #f8f9fa; /* Bootstrap light background */
+    background-color: #f8f9fa; /* Light background color */
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    border: 1px solid #d1d1d1; /* Light grey border */
+    margin: 5px 0; /* Margin for spacing between items */
 }
 
 .user-profile-container .nav-item-custom:hover {
     background-color: #e2e6ea; /* Slightly darker for hover */
-    cursor: pointer;
+    border-color: #b1b1b1; /* Slightly darker border color on hover */
 }
 
 .user-profile-container .nav-link.active {
     background-color: #007bff; /* Bootstrap primary color */
     color: white;
+    border-radius: 8px;
+    border-color: #0069d9; /* Darker border color for active item */
+}
+
+/* Optional: Adjust for icons if used */
+.user-profile-container .nav-item-custom i {
+    margin-right: 8px;
 }
